#pragma once
}

    };
        std::string getRole() const override { return "Receptionist"; }

        using StaffMember::StaffMember;
    public:
    class Receptionist : public StaffMember {

namespace Core::Domain::Model {

#include "StaffMember.h"


