@startuml
title US14 - Class Diagram

hide circle
skinparam classAttributeIconSize 0


class RegisterEmployeeUI {
}

class RegisterEmployeeController {
    + createEmployee(EmployeeDTO dto) : boolean
    + saveEmployee() : boolean
}

class Company {
    + getEmployeeStore() : EmployeeStore
}

class EmployeeStore {
    + createEmployee(EmployeeDTO dto) : StaffMember
    + validateUniqueness(email, phone) : boolean
    + saveEmployee(StaffMember emp) : boolean
}

abstract class StaffMember {
    - name : String
    - postalAddress : String
    - phone : String
    - email : String
    - citizenCardNumber : String
    + StaffMember(name, address, phone, email, ccNum)
    - validateData()
}

class Nurse extends StaffMember
class Receptionist extends StaffMember
class DGSAdministrator extends StaffMember

RegisterEmployeeUI ..> RegisterEmployeeController
RegisterEmployeeController ..> Company
RegisterEmployeeController ..> EmployeeStore
RegisterEmployeeController ..> StaffMember

Company "1" --> "1" EmployeeStore : uses >
EmployeeStore "1" --> "0..*" StaffMember : stores >

@enduml